--- a/.github/workflows/manuallyBuildWorkbook.yml
+++ b/.github/workflows/manuallyBuildWorkbook.yml
@@ -32,7 +32,8 @@ jobs:
         pip install -r requirements.txt
 
     - name: install dependencies
-        run: python -m pip install requests pandas datetime
+        run: |
+          python -m pip install requests pandas datetime
     
     - name: execute py script # run the run.py to get the latest data
         run: |
