Change to python3

--- a/.github/workflows/manuallyBuildWorkbook.yml
+++ b/.github/workflows/manuallyBuildWorkbook.yml
@@ -33,11 +33,11 @@ jobs:
 
     - name: install dependencies
         run: |
-          python -m pip install requests pandas datetime
+          pip install requests pandas datetime
     
-    - name: execute py script # run the run.py to get the latest data
+    - name: execute ThingSpeak py script # run the run.py to get the latest data
         run: |
-          python ThingSpeakAPI.py
+          python3 ThingSpeakAPI.py
     
     # Download 'data' folder from Google Drive
     - name: Download from Google Drive
