--- a/.github/workflows/manuallyBuildWorkbook.yml
+++ b/.github/workflows/manuallyBuildWorkbook.yml
@@ -39,10 +39,10 @@ jobs:
       run: |
           python3 ThingSpeakAPI.py
     
-#     # Download 'data' folder from Google Drive
-#     - name: Make Python Directory #Download from Google Drive
-#       run: |
-#             mkdir -p data
+    # Download 'data' folder from Google Drive
+    - name: Make Python Directory #Download from Google Drive
+      run: |
+            mkdir -p data
 #         python3 downloadDrive.py
             
 # # mv -f input data/input
