--- a/.github/workflows/manuallyBuildWorkbook.yml
+++ b/.github/workflows/manuallyBuildWorkbook.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: install dependencies
       run: |
-          pip install requests pandas datetime ipywidgets plotly
+          pip install requests pandas datetime ipywidgets plotly IPython
     
     - name: execute ThingSpeak py script # run the run.py to get the latest data
       run: |
